@@ -74,15 +74,13 @@ public Q_SLOTS:
     void searchItems();
     void controlActions();
     void itemDoubleClicked(const QModelIndex &);
-    #ifdef ENABLE_KDE_SUPPORT
     void openFileManager();
-    #endif
 
 private:
     QStringList walk(QModelIndex rootItem);
 
 private:
-    #ifdef ENABLE_KDE_SUPPORT
+    #ifndef Q_OS_WIN
     Action *browseAction;
     #endif
     DirViewProxyModel proxy;
