@@ -101,6 +101,7 @@
     buttons, and 2 toolbuttons. QGtkStyle messes up the widget focus if this is
     used, so Cantata's spin box attempts to work-around this.
 58. Improve look of Gtk3 style spinbox.
+59. Use xdg-open for "Open In File Manager" action of folder page.
 
 0.9.2
 -----
